--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ JavaScript: Adds interactivity to web pages. Frameworks and libraries like React
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="images-removebg-preview.png"">
+                        <img src=" https://burst.shopifycdn.com/photos/startup-desktop.jpg?width=1000&format=pjpg&exif=0&iptc=0">
                     </div>
                     
                     <div>
